--- a/documentation/latex/snake_8c.tex
+++ b/documentation/latex/snake_8c.tex
@@ -27,29 +27,27 @@ void \mbox{\hyperlink{snake_8c_a2d83b8480d86f05d028360c36f7a9335}{labyrinth\+\_\
 \begin{DoxyCompactList}\small\item\em Initializes the data structures. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{snake_8c_acd65deeb26f89dd33e84b31afe2e9be4}{labyrinth\+\_\+free}} (labyrinth\+\_\+t $\ast$l, snake\+\_\+t $\ast$s)
 \begin{DoxyCompactList}\small\item\em Frees the occupied memory for the labyrinth and snake structures. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{snake_8c_af4dd7c26af7f07c5ac92755a599d7c80}{labyrinth\+\_\+print}} (labyrinth\+\_\+t $\ast$l, int M, int N, snake\+\_\+t $\ast$s)
+void \mbox{\hyperlink{snake_8c_adf4bff5ca8b8609d556e6b8fa3c8ed44}{labyrinth\+\_\+print}} (labyrinth\+\_\+t $\ast$l, snake\+\_\+t $\ast$s)
 \begin{DoxyCompactList}\small\item\em Prints the current state of the labyrinth game. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{snake_8c_a915c7e724f85b799ab526287b0b18577}{find\+\_\+initial\+\_\+position}} (labyrinth\+\_\+t $\ast$l, int $\ast$x, int $\ast$y)
 \begin{DoxyCompactList}\small\item\em Finds the initial position of the snake in the labyrinth. \end{DoxyCompactList}\item 
-bool \mbox{\hyperlink{snake_8c_ad6e46557bdf7449620dcc1d92fb54741}{is\+\_\+move\+\_\+valid}} (labyrinth\+\_\+t $\ast$l, int row, int col)
-\begin{DoxyCompactList}\small\item\em Checks if a move is valid within the labyrinth boundaries. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{snake_8c_a2e6ac01d8773c1f85892a883ff9d78ee}{moves\+\_\+input}} (char $\ast$move, char $\ast$moves, int $\ast$row, int $\ast$col, int $\ast$score, snake\+\_\+t $\ast$head, labyrinth\+\_\+t $\ast$l, int mode)
 \begin{DoxyCompactList}\small\item\em Handles user input for moves and updates the game state accordingly. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{snake_8c_ac714958e0c94c71011c20e328b190713}{obstacles\+\_\+borders\+\_\+check}} (labyrinth\+\_\+t $\ast$l, snake\+\_\+t $\ast$head, int $\ast$row, int $\ast$col)
 \begin{DoxyCompactList}\small\item\em Checks for obstacles, borders and bjects to collect and handles collisions. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{snake_8c_ab3055abf64a540861047c261a5c4145e}{add\+\_\+tail}} (snake\+\_\+t $\ast$head)
+void \mbox{\hyperlink{snake_8c_af1c45d9f8d4376d14696e63c224545a6}{add\+\_\+tail}} (snake\+\_\+t $\ast$head)
 \begin{DoxyCompactList}\small\item\em Adds a new tail segment to the snake. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{snake_8c_a60263fa58e443d898df01c3a170817ba}{check\+\_\+dead\+\_\+ends}} (labyrinth\+\_\+t $\ast$l, snake\+\_\+t $\ast$head)
 \begin{DoxyCompactList}\small\item\em Checks for dead ends and moves the snake accordingly. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{snake_8c_a8f15eb264cdcabee8d3c7d7146ceb1f7}{labyrinth\+\_\+interactive\+\_\+mode\+\_\+run}} (int M, int N)
 \begin{DoxyCompactList}\small\item\em Runs the labyrinth game in interactive mode. \end{DoxyCompactList}\item 
-int \mbox{\hyperlink{snake_8c_a5995d18ba89293a6d42c6d262e5e4a58}{check\+XWest}} (labyrinth\+\_\+t $\ast$l, int row, int col)
+int \mbox{\hyperlink{snake_8c_a0cba947a836173e3af281dda6f40ce0f}{check\+XWest}} (labyrinth\+\_\+t $\ast$l, int row, int col)
 \begin{DoxyCompactList}\small\item\em Checks if it\textquotesingle{}s safe to move to the west. \end{DoxyCompactList}\item 
-int \mbox{\hyperlink{snake_8c_afdc587414ed2a344485a893d57d4af3d}{check\+XEast}} (labyrinth\+\_\+t $\ast$l, int row, int col)
+int \mbox{\hyperlink{snake_8c_ac0e24dfc247c2b86c9bdc82860418e74}{check\+XEast}} (labyrinth\+\_\+t $\ast$l, int row, int col)
 \begin{DoxyCompactList}\small\item\em Checks if it\textquotesingle{}s safe to move to the east. \end{DoxyCompactList}\item 
-int \mbox{\hyperlink{snake_8c_a29ca3f45eb23225e37b7ecf276914680}{check\+YNorth}} (labyrinth\+\_\+t $\ast$l, int row, int col)
+int \mbox{\hyperlink{snake_8c_a956bbd81ff79a0195d6fb560fde11b1e}{check\+YNorth}} (labyrinth\+\_\+t $\ast$l, int row, int col)
 \begin{DoxyCompactList}\small\item\em Checks if it\textquotesingle{}s safe to move to the north. \end{DoxyCompactList}\item 
-int \mbox{\hyperlink{snake_8c_acf3524bc28c9f393404021be8aa74fe5}{check\+YSouth}} (labyrinth\+\_\+t $\ast$l, int row, int col)
+int \mbox{\hyperlink{snake_8c_a0bc11b9bb548dc506bc928136c9ec480}{check\+YSouth}} (labyrinth\+\_\+t $\ast$l, int row, int col)
 \begin{DoxyCompactList}\small\item\em Checks if it\textquotesingle{}s safe to move to the south. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{snake_8c_a136d1e8d84e2266fbe84f6c115040ec1}{labyrinth\+\_\+\+AI\+\_\+mode\+\_\+run}} (int M, int N)
 \begin{DoxyCompactList}\small\item\em Runs the labyrinth game in AI mode. \end{DoxyCompactList}\end{DoxyCompactItemize}
@@ -70,11 +68,11 @@ Copyright (c) 2023
 
 
 \doxysubsection{Function Documentation}
-\mbox{\Hypertarget{snake_8c_ab3055abf64a540861047c261a5c4145e}\label{snake_8c_ab3055abf64a540861047c261a5c4145e}} 
+\mbox{\Hypertarget{snake_8c_af1c45d9f8d4376d14696e63c224545a6}\label{snake_8c_af1c45d9f8d4376d14696e63c224545a6}} 
 \index{snake.c@{snake.c}!add\_tail@{add\_tail}}
 \index{add\_tail@{add\_tail}!snake.c@{snake.c}}
 \doxysubsubsection{\texorpdfstring{add\_tail()}{add\_tail()}}
-{\footnotesize\ttfamily add\+\_\+tail (\begin{DoxyParamCaption}\item[{snake\+\_\+t $\ast$}]{head }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void add\+\_\+tail (\begin{DoxyParamCaption}\item[{snake\+\_\+t $\ast$}]{head }\end{DoxyParamCaption})}
 
 
 
@@ -102,11 +100,11 @@ Checks for dead ends and moves the snake accordingly.
 {\em head} & Pointer to the snake\textquotesingle{}s head. \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{snake_8c_afdc587414ed2a344485a893d57d4af3d}\label{snake_8c_afdc587414ed2a344485a893d57d4af3d}} 
+\mbox{\Hypertarget{snake_8c_ac0e24dfc247c2b86c9bdc82860418e74}\label{snake_8c_ac0e24dfc247c2b86c9bdc82860418e74}} 
 \index{snake.c@{snake.c}!checkXEast@{checkXEast}}
 \index{checkXEast@{checkXEast}!snake.c@{snake.c}}
 \doxysubsubsection{\texorpdfstring{checkXEast()}{checkXEast()}}
-{\footnotesize\ttfamily check\+XEast (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int check\+XEast (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col }\end{DoxyParamCaption})}
 
 
 
@@ -124,11 +122,11 @@ Checks if it\textquotesingle{}s safe to move to the east.
 \begin{DoxyReturn}{Returns}
 1 if it\textquotesingle{}s safe to move, 0 otherwise. 
 \end{DoxyReturn}
-\mbox{\Hypertarget{snake_8c_a5995d18ba89293a6d42c6d262e5e4a58}\label{snake_8c_a5995d18ba89293a6d42c6d262e5e4a58}} 
+\mbox{\Hypertarget{snake_8c_a0cba947a836173e3af281dda6f40ce0f}\label{snake_8c_a0cba947a836173e3af281dda6f40ce0f}} 
 \index{snake.c@{snake.c}!checkXWest@{checkXWest}}
 \index{checkXWest@{checkXWest}!snake.c@{snake.c}}
 \doxysubsubsection{\texorpdfstring{checkXWest()}{checkXWest()}}
-{\footnotesize\ttfamily check\+XWest (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int check\+XWest (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col }\end{DoxyParamCaption})}
 
 
 
@@ -146,11 +144,11 @@ Checks if it\textquotesingle{}s safe to move to the west.
 \begin{DoxyReturn}{Returns}
 1 if it\textquotesingle{}s safe to move, 0 otherwise. 
 \end{DoxyReturn}
-\mbox{\Hypertarget{snake_8c_a29ca3f45eb23225e37b7ecf276914680}\label{snake_8c_a29ca3f45eb23225e37b7ecf276914680}} 
+\mbox{\Hypertarget{snake_8c_a956bbd81ff79a0195d6fb560fde11b1e}\label{snake_8c_a956bbd81ff79a0195d6fb560fde11b1e}} 
 \index{snake.c@{snake.c}!checkYNorth@{checkYNorth}}
 \index{checkYNorth@{checkYNorth}!snake.c@{snake.c}}
 \doxysubsubsection{\texorpdfstring{checkYNorth()}{checkYNorth()}}
-{\footnotesize\ttfamily check\+YNorth (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int check\+YNorth (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col }\end{DoxyParamCaption})}
 
 
 
@@ -168,11 +166,11 @@ Checks if it\textquotesingle{}s safe to move to the north.
 \begin{DoxyReturn}{Returns}
 1 if it\textquotesingle{}s safe to move, 0 otherwise. 
 \end{DoxyReturn}
-\mbox{\Hypertarget{snake_8c_acf3524bc28c9f393404021be8aa74fe5}\label{snake_8c_acf3524bc28c9f393404021be8aa74fe5}} 
+\mbox{\Hypertarget{snake_8c_a0bc11b9bb548dc506bc928136c9ec480}\label{snake_8c_a0bc11b9bb548dc506bc928136c9ec480}} 
 \index{snake.c@{snake.c}!checkYSouth@{checkYSouth}}
 \index{checkYSouth@{checkYSouth}!snake.c@{snake.c}}
 \doxysubsubsection{\texorpdfstring{checkYSouth()}{checkYSouth()}}
-{\footnotesize\ttfamily check\+YSouth (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int check\+YSouth (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col }\end{DoxyParamCaption})}
 
 
 
@@ -209,28 +207,6 @@ Finds the initial position of the snake in the labyrinth.
 {\em y} & Pointer to store the Y-\/coordinate of the initial position. \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{snake_8c_ad6e46557bdf7449620dcc1d92fb54741}\label{snake_8c_ad6e46557bdf7449620dcc1d92fb54741}} 
-\index{snake.c@{snake.c}!is\_move\_valid@{is\_move\_valid}}
-\index{is\_move\_valid@{is\_move\_valid}!snake.c@{snake.c}}
-\doxysubsubsection{\texorpdfstring{is\_move\_valid()}{is\_move\_valid()}}
-{\footnotesize\ttfamily bool is\+\_\+move\+\_\+valid (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col }\end{DoxyParamCaption})}
-
-
-
-Checks if a move is valid within the labyrinth boundaries. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em l} & Pointer to the labyrinth\+\_\+t structure. \\
-\hline
-{\em row} & The row coordinate of the move. \\
-\hline
-{\em col} & The column coordinate of the move. \\
-\hline
-\end{DoxyParams}
-\begin{DoxyReturn}{Returns}
-true if the move is valid, false otherwise. 
-\end{DoxyReturn}
 \mbox{\Hypertarget{snake_8c_a136d1e8d84e2266fbe84f6c115040ec1}\label{snake_8c_a136d1e8d84e2266fbe84f6c115040ec1}} 
 \index{snake.c@{snake.c}!labyrinth\_AI\_mode\_run@{labyrinth\_AI\_mode\_run}}
 \index{labyrinth\_AI\_mode\_run@{labyrinth\_AI\_mode\_run}!snake.c@{snake.c}}
@@ -303,11 +279,11 @@ Runs the labyrinth game in interactive mode.
 {\em N} & The height of the labyrinth. \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{snake_8c_af4dd7c26af7f07c5ac92755a599d7c80}\label{snake_8c_af4dd7c26af7f07c5ac92755a599d7c80}} 
+\mbox{\Hypertarget{snake_8c_adf4bff5ca8b8609d556e6b8fa3c8ed44}\label{snake_8c_adf4bff5ca8b8609d556e6b8fa3c8ed44}} 
 \index{snake.c@{snake.c}!labyrinth\_print@{labyrinth\_print}}
 \index{labyrinth\_print@{labyrinth\_print}!snake.c@{snake.c}}
 \doxysubsubsection{\texorpdfstring{labyrinth\_print()}{labyrinth\_print()}}
-{\footnotesize\ttfamily void labyrinth\+\_\+print (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{M,  }\item[{int}]{N,  }\item[{snake\+\_\+t $\ast$}]{s }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void labyrinth\+\_\+print (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{snake\+\_\+t $\ast$}]{s }\end{DoxyParamCaption})}
 
 
 
@@ -317,10 +293,6 @@ Prints the current state of the labyrinth game.
 \begin{DoxyParams}{Parameters}
 {\em l} & Pointer to the labyrinth\+\_\+t structure. \\
 \hline
-{\em M} & The width of the labyrinth. \\
-\hline
-{\em N} & The height of the labyrinth. \\
-\hline
 {\em s} & Pointer to the snake\+\_\+t structure representing the snake. \\
 \hline
 \end{DoxyParams}
@@ -328,7 +300,7 @@ Prints the current state of the labyrinth game.
 \index{snake.c@{snake.c}!moves\_input@{moves\_input}}
 \index{moves\_input@{moves\_input}!snake.c@{snake.c}}
 \doxysubsubsection{\texorpdfstring{moves\_input()}{moves\_input()}}
-{\footnotesize\ttfamily void moves\+\_\+input (\begin{DoxyParamCaption}\item[{char $\ast$}]{move,  }\item[{char $\ast$}]{moves,  }\item[{int $\ast$}]{row,  }\item[{int $\ast$}]{col,  }\item[{int $\ast$}]{score,  }\item[{snake\+\_\+t $\ast$}]{s,  }\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{mode }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void moves\+\_\+input (\begin{DoxyParamCaption}\item[{char $\ast$}]{move,  }\item[{char $\ast$}]{moves,  }\item[{int $\ast$}]{row,  }\item[{int $\ast$}]{col,  }\item[{int $\ast$}]{score,  }\item[{snake\+\_\+t $\ast$}]{head,  }\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{mode }\end{DoxyParamCaption})}
 
 
 
