--- a/documentation/latex/snake_8h_source.tex
+++ b/documentation/latex/snake_8h_source.tex
@@ -14,32 +14,30 @@
 \DoxyCodeLine{00037\ }
 \DoxyCodeLine{00045\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_acd65deeb26f89dd33e84b31afe2e9be4}{labyrinth\_free}}\ (labyrinth\_t\ *l,\ snake\_t\ *s);}
 \DoxyCodeLine{00046\ }
-\DoxyCodeLine{00056\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_af4dd7c26af7f07c5ac92755a599d7c80}{labyrinth\_print}}\ (labyrinth\_t\ *l,\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a0607947751248ffb245cb463d1e470dc}{M}},\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a4fddd68e88f981444449ba3dc46c0014}{N}},\ snake\_t\ *s);}
-\DoxyCodeLine{00057\ }
-\DoxyCodeLine{00066\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a915c7e724f85b799ab526287b0b18577}{find\_initial\_position}}\ (labyrinth\_t\ *l,\ \textcolor{keywordtype}{int}\ *x,\ \textcolor{keywordtype}{int}\ *y);}
-\DoxyCodeLine{00067\ }
-\DoxyCodeLine{00077\ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{snake_8h_ad6e46557bdf7449620dcc1d92fb54741}{is\_move\_valid}}(labyrinth\_t\ *l,\ \textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col);}
-\DoxyCodeLine{00078\ }
-\DoxyCodeLine{00092\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a314e7c365311d5713a3ac16b24edbeb0}{moves\_input}}\ (\textcolor{keywordtype}{char}\ *move,\ \textcolor{keywordtype}{char}\ *moves,\ \textcolor{keywordtype}{int}\ *row,\ \textcolor{keywordtype}{int}\ *col,\ \textcolor{keywordtype}{int}\ *\mbox{\hyperlink{structlabyrinth_afd76e45012bd235bf9e4ec229c86a42b}{score}},\ snake\_t\ *s,\ labyrinth\_t\ *l,\ \textcolor{keywordtype}{int}\ mode);}
-\DoxyCodeLine{00093\ }
-\DoxyCodeLine{00103\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_ac714958e0c94c71011c20e328b190713}{obstacles\_borders\_check}}\ (labyrinth\_t\ *l,\ snake\_t\ *head,\ \textcolor{keywordtype}{int}\ *row,\ \textcolor{keywordtype}{int}\ *col);}
-\DoxyCodeLine{00104\ }
-\DoxyCodeLine{00111\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_af1c45d9f8d4376d14696e63c224545a6}{add\_tail}}\ (snake\_t\ *head);\ }
-\DoxyCodeLine{00112\ }
-\DoxyCodeLine{00120\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a60263fa58e443d898df01c3a170817ba}{check\_dead\_ends}}\ (labyrinth\_t\ *l,\ snake\_t\ *head);\ }
-\DoxyCodeLine{00121\ }
-\DoxyCodeLine{00129\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a8f15eb264cdcabee8d3c7d7146ceb1f7}{labyrinth\_interactive\_mode\_run}}\ (\textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a0607947751248ffb245cb463d1e470dc}{M}},\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a4fddd68e88f981444449ba3dc46c0014}{N}});}
-\DoxyCodeLine{00130\ }
-\DoxyCodeLine{00140\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{snake_8h_a0cba947a836173e3af281dda6f40ce0f}{checkXWest}}(labyrinth\_t*\ l,\ \textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col);}
-\DoxyCodeLine{00141\ }
-\DoxyCodeLine{00151\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{snake_8h_ac0e24dfc247c2b86c9bdc82860418e74}{checkXEast}}(labyrinth\_t*\ l,\ \textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col);}
-\DoxyCodeLine{00152\ }
-\DoxyCodeLine{00162\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{snake_8h_a956bbd81ff79a0195d6fb560fde11b1e}{checkYNorth}}(labyrinth\_t*\ l,\ \textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col);}
-\DoxyCodeLine{00163\ }
-\DoxyCodeLine{00173\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{snake_8h_a0bc11b9bb548dc506bc928136c9ec480}{checkYSouth}}(labyrinth\_t*\ l,\ \textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col);}
-\DoxyCodeLine{00174\ }
-\DoxyCodeLine{00182\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a136d1e8d84e2266fbe84f6c115040ec1}{labyrinth\_AI\_mode\_run}}\ (\textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a0607947751248ffb245cb463d1e470dc}{M}},\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a4fddd68e88f981444449ba3dc46c0014}{N}});}
-\DoxyCodeLine{00183\ }
-\DoxyCodeLine{00184\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00054\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_adf4bff5ca8b8609d556e6b8fa3c8ed44}{labyrinth\_print}}\ (labyrinth\_t\ *l,\ snake\_t\ *s);}
+\DoxyCodeLine{00055\ }
+\DoxyCodeLine{00064\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a915c7e724f85b799ab526287b0b18577}{find\_initial\_position}}\ (labyrinth\_t\ *l,\ \textcolor{keywordtype}{int}\ *x,\ \textcolor{keywordtype}{int}\ *y);}
+\DoxyCodeLine{00065\ }
+\DoxyCodeLine{00079\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a2e6ac01d8773c1f85892a883ff9d78ee}{moves\_input}}\ (\textcolor{keywordtype}{char}\ *move,\ \textcolor{keywordtype}{char}\ *moves,\ \textcolor{keywordtype}{int}\ *row,\ \textcolor{keywordtype}{int}\ *col,\ \textcolor{keywordtype}{int}\ *\mbox{\hyperlink{structlabyrinth_afd76e45012bd235bf9e4ec229c86a42b}{score}},\ snake\_t\ *head,\ labyrinth\_t\ *l,\ \textcolor{keywordtype}{int}\ mode);}
+\DoxyCodeLine{00080\ }
+\DoxyCodeLine{00090\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_ac714958e0c94c71011c20e328b190713}{obstacles\_borders\_check}}\ (labyrinth\_t\ *l,\ snake\_t\ *head,\ \textcolor{keywordtype}{int}\ *row,\ \textcolor{keywordtype}{int}\ *col);}
+\DoxyCodeLine{00091\ }
+\DoxyCodeLine{00098\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_af1c45d9f8d4376d14696e63c224545a6}{add\_tail}}\ (snake\_t\ *head);\ }
+\DoxyCodeLine{00099\ }
+\DoxyCodeLine{00107\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a60263fa58e443d898df01c3a170817ba}{check\_dead\_ends}}\ (labyrinth\_t\ *l,\ snake\_t\ *head);\ }
+\DoxyCodeLine{00108\ }
+\DoxyCodeLine{00116\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a8f15eb264cdcabee8d3c7d7146ceb1f7}{labyrinth\_interactive\_mode\_run}}\ (\textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a0607947751248ffb245cb463d1e470dc}{M}},\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a4fddd68e88f981444449ba3dc46c0014}{N}});}
+\DoxyCodeLine{00117\ }
+\DoxyCodeLine{00127\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{snake_8h_a0cba947a836173e3af281dda6f40ce0f}{checkXWest}}(labyrinth\_t*\ l,\ \textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col);}
+\DoxyCodeLine{00128\ }
+\DoxyCodeLine{00138\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{snake_8h_ac0e24dfc247c2b86c9bdc82860418e74}{checkXEast}}(labyrinth\_t*\ l,\ \textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col);}
+\DoxyCodeLine{00139\ }
+\DoxyCodeLine{00149\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{snake_8h_a956bbd81ff79a0195d6fb560fde11b1e}{checkYNorth}}(labyrinth\_t*\ l,\ \textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col);}
+\DoxyCodeLine{00150\ }
+\DoxyCodeLine{00160\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{snake_8h_a0bc11b9bb548dc506bc928136c9ec480}{checkYSouth}}(labyrinth\_t*\ l,\ \textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col);}
+\DoxyCodeLine{00161\ }
+\DoxyCodeLine{00169\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{snake_8h_a136d1e8d84e2266fbe84f6c115040ec1}{labyrinth\_AI\_mode\_run}}\ (\textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a0607947751248ffb245cb463d1e470dc}{M}},\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structlabyrinth_a4fddd68e88f981444449ba3dc46c0014}{N}});}
+\DoxyCodeLine{00170\ }
+\DoxyCodeLine{00171\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
